--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="contenedor">
         <h1>Login</h1>
-        <form class="square-form" id="forma" name="forma        "action="Mi Servidor" method="post" onsubmit="datosEnviados()">
+        <form class="square-form" id="forma" name="forma        "action="Mi Servidor" method="post" autocomplete="off" onsubmit="datosEnviados()">
             <div class="elemento content-inputs"> 
                 <input type="text" id="usuario" name="usuario" required="true">
                 <label for="usuario">Usuario</label>
