--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <div class="contenedor">
-        <h1>Login</h1>
-        <form class="square-form" id="forma" name="forma        "action="Mi Servidor" method="post" autocomplete="off" onsubmit="datosEnviados()">
+        <h1 class="principal-title">Login</h1>
+        <form class="square-form" id="forma" name="forma"action="Mi Servidor" method="post" autocomplete="off" onsubmit="datosEnviados()">
             <div class="elemento content-inputs"> 
                 <input type="text" id="usuario" name="usuario" required="true">
                 <label for="usuario">Usuario</label>
